--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -20,7 +20,6 @@ body, html {
 }
 
 .topBarHome {
-  height: 7%;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -36,33 +35,32 @@ body, html {
 }
 
 .menuButton {
-  font-size: 30px;
-  margin-right: 3%;
-  padding: 1%;
-  padding-top: 1%;
-  cursor: pointer;
-  z-index: 10001;
-  background-color: #003399;
-  color: rgb(234, 241, 242);
-  border: 4px solid #0b1a52;
-  border-radius: 15%;
+    font-size: 30px;
+    margin-right: 5%;
+    padding: 5px 10px;
+    cursor: pointer;
+    background-color: var(--color-primary);
+    color: rgb(234, 241, 242);
+    border: 4px solid var(--color-text-dark);
+    border-radius: 15%;
+    line-height: 1;
 }
 
 .slideMenu {
-  position: fixed;
-  top: 0;
-  right: -100vw;
-  width: min(55vw, 300px);
-  height: 100%;
-  background-color: #9eeaf4;
-  box-shadow: -6px 0 15px rgba(0, 0, 0, 0.4);
-  font-family: 'Poppins', 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-  color: #1a1a1a;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  transition: right 0.3s ease-out;
-  z-index: 15000;
+    position: fixed;
+    top: 0;
+    right: -100vw;
+    width: min(55vw, 300px);
+    height: 100%;
+    background-color: var(--color-light-blue);
+    box-shadow: -6px 0 15px rgba(0, 0, 0, 0.4);
+    font-family: 'Poppins', sans-serif;
+    color: var(--color-text-menu);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    transition: right 0.3s ease-out;
+    z-index: 15000;
 }
 
 .slideMenu.open {
